# EbookFrontendCore

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh
src/: Book.h  EbookConfig.h  ebook.cpp
src/models/: Book.h
